[package]
name = "work-record-report"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
work-record-core = { path = "../work-record-core" }

[dev-dependencies]
chrono.workspace = true
uuid.workspace = true
