[package]
name = "work-record-search"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
work-record-core = { path = "../work-record-core" }
work-record-store = { path = "../work-record-store" }

[dev-dependencies]
tempfile.workspace = true
