[package]
name = "work-record-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
work-record-core = { path = "../work-record-core" }

[dev-dependencies]
tempfile.workspace = true
